parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> Remitente P Password A Asunto D Destinatario T tipoMensaje
Rule 2     Remitente -> Correo
Rule 3     Asunto -> Letras transformacion2
Rule 4     Asunto -> Numeros transformacion2
Rule 5     Destinatario -> Correo
Rule 6     Password -> Letras restoPass
Rule 7     Password -> Numeros restoPass
Rule 8     Password -> Caracteres restoPass
Rule 9     restoPass -> Letras restoPass
Rule 10    restoPass -> Numeros restoPass
Rule 11    restoPass -> Caracteres restoPass
Rule 12    restoPass -> empty
Rule 13    tipoMensaje -> BN binarioNumero
Rule 14    tipoMensaje -> MB mensajeBinario
Rule 15    tipoMensaje -> NB numeroBinario
Rule 16    Caracteres -> CARACTERES
Rule 17    Correo -> Usuario ARROBA Dominio PUNTO Tipo
Rule 18    Usuario -> Letras restoID
Rule 19    Usuario -> Numeros restoID
Rule 20    restoID -> Letras restoID
Rule 21    restoID -> GUIONBAJO restoID
Rule 22    restoID -> Numeros restoID
Rule 23    restoID -> PUNTO restoID
Rule 24    restoID -> empty
Rule 25    Dominio -> DOMINIO
Rule 26    Tipo -> TIPO
Rule 27    Letras -> LETRAS
Rule 28    Numeros -> DIGITOS
Rule 29    transformacion -> Letras transformacion
Rule 30    transformacion -> B transformacion
Rule 31    transformacion -> Numeros transformacion
Rule 32    transformacion -> empty
Rule 33    transformacion2 -> Letras transformacion2
Rule 34    transformacion2 -> Numeros transformacion2
Rule 35    transformacion2 -> empty
Rule 36    binarioNumero -> Letras transformacion
Rule 37    binarioNumero -> B transformacion
Rule 38    binarioNumero -> Numeros transformacion
Rule 39    mensajeBinario -> Letras transformacion2
Rule 40    mensajeBinario -> Numeros transformacion2
Rule 41    numeroBinario -> Letras transformacion2
Rule 42    numeroBinario -> Numeros transformacion2
Rule 43    empty -> <empty>

Terminals, with rules where they appear

A                    : 1
ARROBA               : 17
B                    : 30 37
BN                   : 13
CARACTERES           : 16
D                    : 1
DIGITOS              : 28
DOMINIO              : 25
GUIONBAJO            : 21
LETRAS               : 27
MB                   : 14
NB                   : 15
P                    : 1
PUNTO                : 17 23
T                    : 1
TIPO                 : 26
error                : 

Nonterminals, with rules where they appear

Asunto               : 1
Caracteres           : 8 11
Correo               : 2 5
Destinatario         : 1
Dominio              : 17
Letras               : 3 6 9 18 20 29 33 36 39 41
Numeros              : 4 7 10 19 22 31 34 38 40 42
Password             : 1
Remitente            : 1
S                    : 0
Tipo                 : 17
Usuario              : 17
binarioNumero        : 13
empty                : 12 24 32 35
mensajeBinario       : 14
numeroBinario        : 15
restoID              : 18 19 20 21 22 23
restoPass            : 6 7 8 9 10 11
tipoMensaje          : 1
transformacion       : 29 30 31 36 37 38
transformacion2      : 3 4 33 34 39 40 41 42

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . Remitente P Password A Asunto D Destinatario T tipoMensaje
    (2) Remitente -> . Correo
    (17) Correo -> . Usuario ARROBA Dominio PUNTO Tipo
    (18) Usuario -> . Letras restoID
    (19) Usuario -> . Numeros restoID
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8

    S                              shift and go to state 1
    Remitente                      shift and go to state 2
    Correo                         shift and go to state 3
    Usuario                        shift and go to state 4
    Letras                         shift and go to state 5
    Numeros                        shift and go to state 6

state 1

    (0) S' -> S .



state 2

    (1) S -> Remitente . P Password A Asunto D Destinatario T tipoMensaje

    P               shift and go to state 9


state 3

    (2) Remitente -> Correo .

    P               reduce using rule 2 (Remitente -> Correo .)


state 4

    (17) Correo -> Usuario . ARROBA Dominio PUNTO Tipo

    ARROBA          shift and go to state 10


state 5

    (18) Usuario -> Letras . restoID
    (20) restoID -> . Letras restoID
    (21) restoID -> . GUIONBAJO restoID
    (22) restoID -> . Numeros restoID
    (23) restoID -> . PUNTO restoID
    (24) restoID -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    GUIONBAJO       shift and go to state 13
    PUNTO           shift and go to state 15
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    ARROBA          reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 11
    restoID                        shift and go to state 12
    Numeros                        shift and go to state 14
    empty                          shift and go to state 16

state 6

    (19) Usuario -> Numeros . restoID
    (20) restoID -> . Letras restoID
    (21) restoID -> . GUIONBAJO restoID
    (22) restoID -> . Numeros restoID
    (23) restoID -> . PUNTO restoID
    (24) restoID -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    GUIONBAJO       shift and go to state 13
    PUNTO           shift and go to state 15
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    ARROBA          reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 14
    restoID                        shift and go to state 17
    Letras                         shift and go to state 11
    empty                          shift and go to state 16

state 7

    (27) Letras -> LETRAS .

    GUIONBAJO       reduce using rule 27 (Letras -> LETRAS .)
    PUNTO           reduce using rule 27 (Letras -> LETRAS .)
    LETRAS          reduce using rule 27 (Letras -> LETRAS .)
    DIGITOS         reduce using rule 27 (Letras -> LETRAS .)
    ARROBA          reduce using rule 27 (Letras -> LETRAS .)
    CARACTERES      reduce using rule 27 (Letras -> LETRAS .)
    A               reduce using rule 27 (Letras -> LETRAS .)
    D               reduce using rule 27 (Letras -> LETRAS .)
    $end            reduce using rule 27 (Letras -> LETRAS .)
    B               reduce using rule 27 (Letras -> LETRAS .)


state 8

    (28) Numeros -> DIGITOS .

    GUIONBAJO       reduce using rule 28 (Numeros -> DIGITOS .)
    PUNTO           reduce using rule 28 (Numeros -> DIGITOS .)
    LETRAS          reduce using rule 28 (Numeros -> DIGITOS .)
    DIGITOS         reduce using rule 28 (Numeros -> DIGITOS .)
    ARROBA          reduce using rule 28 (Numeros -> DIGITOS .)
    CARACTERES      reduce using rule 28 (Numeros -> DIGITOS .)
    A               reduce using rule 28 (Numeros -> DIGITOS .)
    D               reduce using rule 28 (Numeros -> DIGITOS .)
    $end            reduce using rule 28 (Numeros -> DIGITOS .)
    B               reduce using rule 28 (Numeros -> DIGITOS .)


state 9

    (1) S -> Remitente P . Password A Asunto D Destinatario T tipoMensaje
    (6) Password -> . Letras restoPass
    (7) Password -> . Numeros restoPass
    (8) Password -> . Caracteres restoPass
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22

    Password                       shift and go to state 18
    Letras                         shift and go to state 19
    Numeros                        shift and go to state 20
    Caracteres                     shift and go to state 21

state 10

    (17) Correo -> Usuario ARROBA . Dominio PUNTO Tipo
    (25) Dominio -> . DOMINIO

    DOMINIO         shift and go to state 24

    Dominio                        shift and go to state 23

state 11

    (20) restoID -> Letras . restoID
    (20) restoID -> . Letras restoID
    (21) restoID -> . GUIONBAJO restoID
    (22) restoID -> . Numeros restoID
    (23) restoID -> . PUNTO restoID
    (24) restoID -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    GUIONBAJO       shift and go to state 13
    PUNTO           shift and go to state 15
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    ARROBA          reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 11
    restoID                        shift and go to state 25
    Numeros                        shift and go to state 14
    empty                          shift and go to state 16

state 12

    (18) Usuario -> Letras restoID .

    ARROBA          reduce using rule 18 (Usuario -> Letras restoID .)


state 13

    (21) restoID -> GUIONBAJO . restoID
    (20) restoID -> . Letras restoID
    (21) restoID -> . GUIONBAJO restoID
    (22) restoID -> . Numeros restoID
    (23) restoID -> . PUNTO restoID
    (24) restoID -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    GUIONBAJO       shift and go to state 13
    PUNTO           shift and go to state 15
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    ARROBA          reduce using rule 43 (empty -> .)

    restoID                        shift and go to state 26
    Letras                         shift and go to state 11
    Numeros                        shift and go to state 14
    empty                          shift and go to state 16

state 14

    (22) restoID -> Numeros . restoID
    (20) restoID -> . Letras restoID
    (21) restoID -> . GUIONBAJO restoID
    (22) restoID -> . Numeros restoID
    (23) restoID -> . PUNTO restoID
    (24) restoID -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    GUIONBAJO       shift and go to state 13
    PUNTO           shift and go to state 15
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    ARROBA          reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 14
    restoID                        shift and go to state 27
    Letras                         shift and go to state 11
    empty                          shift and go to state 16

state 15

    (23) restoID -> PUNTO . restoID
    (20) restoID -> . Letras restoID
    (21) restoID -> . GUIONBAJO restoID
    (22) restoID -> . Numeros restoID
    (23) restoID -> . PUNTO restoID
    (24) restoID -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    GUIONBAJO       shift and go to state 13
    PUNTO           shift and go to state 15
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    ARROBA          reduce using rule 43 (empty -> .)

    restoID                        shift and go to state 28
    Letras                         shift and go to state 11
    Numeros                        shift and go to state 14
    empty                          shift and go to state 16

state 16

    (24) restoID -> empty .

    ARROBA          reduce using rule 24 (restoID -> empty .)


state 17

    (19) Usuario -> Numeros restoID .

    ARROBA          reduce using rule 19 (Usuario -> Numeros restoID .)


state 18

    (1) S -> Remitente P Password . A Asunto D Destinatario T tipoMensaje

    A               shift and go to state 29


state 19

    (6) Password -> Letras . restoPass
    (9) restoPass -> . Letras restoPass
    (10) restoPass -> . Numeros restoPass
    (11) restoPass -> . Caracteres restoPass
    (12) restoPass -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22
    A               reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 30
    restoPass                      shift and go to state 31
    Numeros                        shift and go to state 32
    Caracteres                     shift and go to state 33
    empty                          shift and go to state 34

state 20

    (7) Password -> Numeros . restoPass
    (9) restoPass -> . Letras restoPass
    (10) restoPass -> . Numeros restoPass
    (11) restoPass -> . Caracteres restoPass
    (12) restoPass -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22
    A               reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 32
    restoPass                      shift and go to state 35
    Letras                         shift and go to state 30
    Caracteres                     shift and go to state 33
    empty                          shift and go to state 34

state 21

    (8) Password -> Caracteres . restoPass
    (9) restoPass -> . Letras restoPass
    (10) restoPass -> . Numeros restoPass
    (11) restoPass -> . Caracteres restoPass
    (12) restoPass -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22
    A               reduce using rule 43 (empty -> .)

    Caracteres                     shift and go to state 33
    restoPass                      shift and go to state 36
    Letras                         shift and go to state 30
    Numeros                        shift and go to state 32
    empty                          shift and go to state 34

state 22

    (16) Caracteres -> CARACTERES .

    LETRAS          reduce using rule 16 (Caracteres -> CARACTERES .)
    DIGITOS         reduce using rule 16 (Caracteres -> CARACTERES .)
    CARACTERES      reduce using rule 16 (Caracteres -> CARACTERES .)
    A               reduce using rule 16 (Caracteres -> CARACTERES .)


state 23

    (17) Correo -> Usuario ARROBA Dominio . PUNTO Tipo

    PUNTO           shift and go to state 37


state 24

    (25) Dominio -> DOMINIO .

    PUNTO           reduce using rule 25 (Dominio -> DOMINIO .)


state 25

    (20) restoID -> Letras restoID .

    ARROBA          reduce using rule 20 (restoID -> Letras restoID .)


state 26

    (21) restoID -> GUIONBAJO restoID .

    ARROBA          reduce using rule 21 (restoID -> GUIONBAJO restoID .)


state 27

    (22) restoID -> Numeros restoID .

    ARROBA          reduce using rule 22 (restoID -> Numeros restoID .)


state 28

    (23) restoID -> PUNTO restoID .

    ARROBA          reduce using rule 23 (restoID -> PUNTO restoID .)


state 29

    (1) S -> Remitente P Password A . Asunto D Destinatario T tipoMensaje
    (3) Asunto -> . Letras transformacion2
    (4) Asunto -> . Numeros transformacion2
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8

    Asunto                         shift and go to state 38
    Letras                         shift and go to state 39
    Numeros                        shift and go to state 40

state 30

    (9) restoPass -> Letras . restoPass
    (9) restoPass -> . Letras restoPass
    (10) restoPass -> . Numeros restoPass
    (11) restoPass -> . Caracteres restoPass
    (12) restoPass -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22
    A               reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 30
    restoPass                      shift and go to state 41
    Numeros                        shift and go to state 32
    Caracteres                     shift and go to state 33
    empty                          shift and go to state 34

state 31

    (6) Password -> Letras restoPass .

    A               reduce using rule 6 (Password -> Letras restoPass .)


state 32

    (10) restoPass -> Numeros . restoPass
    (9) restoPass -> . Letras restoPass
    (10) restoPass -> . Numeros restoPass
    (11) restoPass -> . Caracteres restoPass
    (12) restoPass -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22
    A               reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 32
    restoPass                      shift and go to state 42
    Letras                         shift and go to state 30
    Caracteres                     shift and go to state 33
    empty                          shift and go to state 34

state 33

    (11) restoPass -> Caracteres . restoPass
    (9) restoPass -> . Letras restoPass
    (10) restoPass -> . Numeros restoPass
    (11) restoPass -> . Caracteres restoPass
    (12) restoPass -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (16) Caracteres -> . CARACTERES
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    CARACTERES      shift and go to state 22
    A               reduce using rule 43 (empty -> .)

    Caracteres                     shift and go to state 33
    restoPass                      shift and go to state 43
    Letras                         shift and go to state 30
    Numeros                        shift and go to state 32
    empty                          shift and go to state 34

state 34

    (12) restoPass -> empty .

    A               reduce using rule 12 (restoPass -> empty .)


state 35

    (7) Password -> Numeros restoPass .

    A               reduce using rule 7 (Password -> Numeros restoPass .)


state 36

    (8) Password -> Caracteres restoPass .

    A               reduce using rule 8 (Password -> Caracteres restoPass .)


state 37

    (17) Correo -> Usuario ARROBA Dominio PUNTO . Tipo
    (26) Tipo -> . TIPO

    TIPO            shift and go to state 45

    Tipo                           shift and go to state 44

state 38

    (1) S -> Remitente P Password A Asunto . D Destinatario T tipoMensaje

    D               shift and go to state 46


state 39

    (3) Asunto -> Letras . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    D               reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 47
    transformacion2                shift and go to state 48
    Numeros                        shift and go to state 49
    empty                          shift and go to state 50

state 40

    (4) Asunto -> Numeros . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    D               reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 49
    transformacion2                shift and go to state 51
    Letras                         shift and go to state 47
    empty                          shift and go to state 50

state 41

    (9) restoPass -> Letras restoPass .

    A               reduce using rule 9 (restoPass -> Letras restoPass .)


state 42

    (10) restoPass -> Numeros restoPass .

    A               reduce using rule 10 (restoPass -> Numeros restoPass .)


state 43

    (11) restoPass -> Caracteres restoPass .

    A               reduce using rule 11 (restoPass -> Caracteres restoPass .)


state 44

    (17) Correo -> Usuario ARROBA Dominio PUNTO Tipo .

    P               reduce using rule 17 (Correo -> Usuario ARROBA Dominio PUNTO Tipo .)
    T               reduce using rule 17 (Correo -> Usuario ARROBA Dominio PUNTO Tipo .)


state 45

    (26) Tipo -> TIPO .

    P               reduce using rule 26 (Tipo -> TIPO .)
    T               reduce using rule 26 (Tipo -> TIPO .)


state 46

    (1) S -> Remitente P Password A Asunto D . Destinatario T tipoMensaje
    (5) Destinatario -> . Correo
    (17) Correo -> . Usuario ARROBA Dominio PUNTO Tipo
    (18) Usuario -> . Letras restoID
    (19) Usuario -> . Numeros restoID
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8

    Destinatario                   shift and go to state 52
    Correo                         shift and go to state 53
    Usuario                        shift and go to state 4
    Letras                         shift and go to state 5
    Numeros                        shift and go to state 6

state 47

    (33) transformacion2 -> Letras . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    D               reduce using rule 43 (empty -> .)
    $end            reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 47
    transformacion2                shift and go to state 54
    Numeros                        shift and go to state 49
    empty                          shift and go to state 50

state 48

    (3) Asunto -> Letras transformacion2 .

    D               reduce using rule 3 (Asunto -> Letras transformacion2 .)


state 49

    (34) transformacion2 -> Numeros . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    D               reduce using rule 43 (empty -> .)
    $end            reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 49
    transformacion2                shift and go to state 55
    Letras                         shift and go to state 47
    empty                          shift and go to state 50

state 50

    (35) transformacion2 -> empty .

    D               reduce using rule 35 (transformacion2 -> empty .)
    $end            reduce using rule 35 (transformacion2 -> empty .)


state 51

    (4) Asunto -> Numeros transformacion2 .

    D               reduce using rule 4 (Asunto -> Numeros transformacion2 .)


state 52

    (1) S -> Remitente P Password A Asunto D Destinatario . T tipoMensaje

    T               shift and go to state 56


state 53

    (5) Destinatario -> Correo .

    T               reduce using rule 5 (Destinatario -> Correo .)


state 54

    (33) transformacion2 -> Letras transformacion2 .

    D               reduce using rule 33 (transformacion2 -> Letras transformacion2 .)
    $end            reduce using rule 33 (transformacion2 -> Letras transformacion2 .)


state 55

    (34) transformacion2 -> Numeros transformacion2 .

    D               reduce using rule 34 (transformacion2 -> Numeros transformacion2 .)
    $end            reduce using rule 34 (transformacion2 -> Numeros transformacion2 .)


state 56

    (1) S -> Remitente P Password A Asunto D Destinatario T . tipoMensaje
    (13) tipoMensaje -> . BN binarioNumero
    (14) tipoMensaje -> . MB mensajeBinario
    (15) tipoMensaje -> . NB numeroBinario

    BN              shift and go to state 58
    MB              shift and go to state 59
    NB              shift and go to state 60

    tipoMensaje                    shift and go to state 57

state 57

    (1) S -> Remitente P Password A Asunto D Destinatario T tipoMensaje .

    $end            reduce using rule 1 (S -> Remitente P Password A Asunto D Destinatario T tipoMensaje .)


state 58

    (13) tipoMensaje -> BN . binarioNumero
    (36) binarioNumero -> . Letras transformacion
    (37) binarioNumero -> . B transformacion
    (38) binarioNumero -> . Numeros transformacion
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS

    B               shift and go to state 63
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8

    binarioNumero                  shift and go to state 61
    Letras                         shift and go to state 62
    Numeros                        shift and go to state 64

state 59

    (14) tipoMensaje -> MB . mensajeBinario
    (39) mensajeBinario -> . Letras transformacion2
    (40) mensajeBinario -> . Numeros transformacion2
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8

    mensajeBinario                 shift and go to state 65
    Letras                         shift and go to state 66
    Numeros                        shift and go to state 67

state 60

    (15) tipoMensaje -> NB . numeroBinario
    (41) numeroBinario -> . Letras transformacion2
    (42) numeroBinario -> . Numeros transformacion2
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8

    numeroBinario                  shift and go to state 68
    Letras                         shift and go to state 69
    Numeros                        shift and go to state 70

state 61

    (13) tipoMensaje -> BN binarioNumero .

    $end            reduce using rule 13 (tipoMensaje -> BN binarioNumero .)


state 62

    (36) binarioNumero -> Letras . transformacion
    (29) transformacion -> . Letras transformacion
    (30) transformacion -> . B transformacion
    (31) transformacion -> . Numeros transformacion
    (32) transformacion -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    B               shift and go to state 73
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 71
    transformacion                 shift and go to state 72
    Numeros                        shift and go to state 74
    empty                          shift and go to state 75

state 63

    (37) binarioNumero -> B . transformacion
    (29) transformacion -> . Letras transformacion
    (30) transformacion -> . B transformacion
    (31) transformacion -> . Numeros transformacion
    (32) transformacion -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    B               shift and go to state 73
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    transformacion                 shift and go to state 76
    Letras                         shift and go to state 71
    Numeros                        shift and go to state 74
    empty                          shift and go to state 75

state 64

    (38) binarioNumero -> Numeros . transformacion
    (29) transformacion -> . Letras transformacion
    (30) transformacion -> . B transformacion
    (31) transformacion -> . Numeros transformacion
    (32) transformacion -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    B               shift and go to state 73
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 74
    transformacion                 shift and go to state 77
    Letras                         shift and go to state 71
    empty                          shift and go to state 75

state 65

    (14) tipoMensaje -> MB mensajeBinario .

    $end            reduce using rule 14 (tipoMensaje -> MB mensajeBinario .)


state 66

    (39) mensajeBinario -> Letras . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 47
    transformacion2                shift and go to state 78
    Numeros                        shift and go to state 49
    empty                          shift and go to state 50

state 67

    (40) mensajeBinario -> Numeros . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 49
    transformacion2                shift and go to state 79
    Letras                         shift and go to state 47
    empty                          shift and go to state 50

state 68

    (15) tipoMensaje -> NB numeroBinario .

    $end            reduce using rule 15 (tipoMensaje -> NB numeroBinario .)


state 69

    (41) numeroBinario -> Letras . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 47
    transformacion2                shift and go to state 80
    Numeros                        shift and go to state 49
    empty                          shift and go to state 50

state 70

    (42) numeroBinario -> Numeros . transformacion2
    (33) transformacion2 -> . Letras transformacion2
    (34) transformacion2 -> . Numeros transformacion2
    (35) transformacion2 -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Numeros                        shift and go to state 49
    transformacion2                shift and go to state 81
    Letras                         shift and go to state 47
    empty                          shift and go to state 50

state 71

    (29) transformacion -> Letras . transformacion
    (29) transformacion -> . Letras transformacion
    (30) transformacion -> . B transformacion
    (31) transformacion -> . Numeros transformacion
    (32) transformacion -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    B               shift and go to state 73
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    Letras                         shift and go to state 71
    transformacion                 shift and go to state 82
    Numeros                        shift and go to state 74
    empty                          shift and go to state 75

state 72

    (36) binarioNumero -> Letras transformacion .

    $end            reduce using rule 36 (binarioNumero -> Letras transformacion .)


state 73

    (30) transformacion -> B . transformacion
    (29) transformacion -> . Letras transformacion
    (30) transformacion -> . B transformacion
    (31) transformacion -> . Numeros transformacion
    (32) transformacion -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    B               shift and go to state 73
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)

    transformacion                 shift and go to state 83
    Letras                         shift and go to state 71
    Numeros                        shift and go to state 74
    empty                          shift and go to state 75

state 74

    (31) transformacion -> Numeros . transformacion
    (29) transformacion -> . Letras transformacion
    (30) transformacion -> . B transformacion
    (31) transformacion -> . Numeros transformacion
    (32) transformacion -> . empty
    (27) Letras -> . LETRAS
    (28) Numeros -> . DIGITOS
    (43) empty -> .

    B               shift and go to state 73
    LETRAS          shift and go to state 7
    DIGITOS         shift and go to state 8
    $end            reduce using rule 43 (empty -> .)
